tests/errors/invalid_main_args.ne
function main(randomArg: int32*): int32
{
    return 0;
}
